--- a/src/components/InputBanner/InputBanner.css
+++ b/src/components/InputBanner/InputBanner.css
@@ -1,43 +1,55 @@
-.form{
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 200px;
+    padding: 20px;
+}
+
+.form h1 {
+    color: #CEE8F2;
+    font-size: 24px;
+    margin: 0;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+    text-shadow: 
+    
+        -2px -2px 0 #1f8f9e,
+        -2px 2px 0 #50d3e4;
+}
+.input-container {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    height: 200px;
-    padding-left: 582px;
-    padding-right: 582px;
+    width: 100%;
+    max-width: 300px;
+    gap: 10px;
 }
 
-.form h1{
-    display: flex;
-    align-items: center;
-    color: whitesmoke;
-    padding-left: 70px;
-    
-}
-
-.form input{
+.form input {
     height: 30px;
-    padding-left: 30px;
+    padding-left: 10px;
     font-size: 14px;
-    width: 250px;
-    border: 1px solid transparent;
+    width: 80%;
+    border: 1px solid #ccc;
     border-radius: 4px;
-    
+    outline: none;
 }
 
-.form button{
+.form button {
     height: 34px;
     font-size: 14px;
-    background-color: #088178;
+    background-color: #b36b95;
     color: #fff;
     white-space: nowrap;
     border: 1px solid transparent;
     border-radius: 4px;
 }
 
-.form button:hover{
+.form button:hover {
     cursor: pointer;
-    color: #b36b95;
+    background-color:#CEE8F2;
+    color: black;
+    transition: ease 0.5s;
 }
 
