--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,5 @@
+/*Rutas Páginas*/
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -40,7 +42,7 @@ nav ul li a{
 
 nav ul li a:not(.active):hover{
     background-color: #bc718e;
-    transition: 0.3s ease;
+    transition: 0.5s ease;
 
 }
 
@@ -62,8 +64,74 @@ nav .menu span{
     border-radius: 0.2rem;
 }
 
+/*Rutas Categorías*/
+
+.category-bar {
+    position: relative;
+}
+
+.category-button {
+    background-color: #e4b3c6;
+    font-size: 1.5rem;
+    color: black;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 0.5rem;
+}
+
+.category-button:hover {
+    background-color: #bc718e;
+    transition: 0.5s ease;  
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 0.5rem;
+}
+
+.dropdown-menu a {
+    color: black;
+    padding: 12px 16px;
+    margin: 0px;
+    text-decoration: none;
+    display: block;
+    transition: background-color 0.3s ease, padding-left 0.3s ease;
+}
+
+.dropdown-menu a:hover {
+    background-color: #bc718e;
+    padding-left: 20px;
+}
+
+/*SearchBar*/
+
+.search{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 600px;
+    padding-bottom: 15px;
+    padding-left: 8px;
+}
+
+.logo-nav{
+    display: flex;
+    position: absolute;
+    justify-content: flex-end;
+    right: 0;
+    top: 0;
+}
+
 @media (max-width: 768px){
-  
+
 nav .menu{
     display: flex;
 }
@@ -90,6 +158,10 @@ nav ul li a{
     align-items: center;
     margin: 0.3rem 0.5rem;
     width: 3.5rem;
+}
+
+.search{
+    display: none;
 }
 
 }
